feat: Introduce sample trace data and enhance the UI with a trace detail modal and sidebar, adjusting gitignore rules for build outputs.

--- a/.gitignore
+++ b/.gitignore
@@ -17,8 +17,8 @@ Thumbs.db
 *.swp
 *.swo
 
-# Build outputs
-dist/
+# Build outputs (but keep client/dist for npm package)
+# dist/
 build/
 
 # Environment
